new-uat/manifest/event-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsevent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsevent
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: wsevent
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: event
        image: uatvemscr.azurecr.io/eventmanagement:latest
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        securityContext:
          runAsNonRoot: true       
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8000
        readinessProbe:  
          tcpSocket:
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
       
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: wsevent-uat
  name: wsevent-uat
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
      # traefik.ingress.kubernetes.io/session-cookie-name: cookie
    traefik.ingress.kubernetes.io/session-cookie-name: cookie
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
    # traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    # traefik.ingress.kubernetes.io/service.sticky.cookie.name: cookie

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: wsevent
